--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -3,14 +3,21 @@
     <div class="col-8 offset-2">
       <div class="card mt-4">
         <div class="card-body">
-          <h5 class="card-title">Example</h5>
+          <h5 class="card-title">Household</h5>
           <p>
-            <strong>ID</strong>: {{example.id}}</p>
+            <strong>{{tab.name}}</strong>
+          </p>
           <p>
+            <strong>{{tab.description}}</strong></p>
           <p>
-            <strong>Text</strong>: {{example.text}}</p>
-          <p>
-            <strong>Description:</strong> {{example.description}}</p>
+            <strong>Outstanding Expenses</strong>:
+            <br>{{expense.name}}
+            <br>{{expense.cost}}
+            <br>{{expense.username}}
+          </p>
+            <button id="new-expense">New Expense</button>
+          </p>
+          </p>
             <a href="/">← Back To Home</a>
         </div>
       </div>
